[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-sample-agent"
version = "0.1.0"
description = "Agentic search workflow in LangGraph powered by the Exa Python SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.1.2",
  "langgraph-cli[inmem]>=0.4.16",
  "langchain>=1.2.12",
  "langchain-openai>=1.1.11",
  "exa-py>=2.9.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.2",
  "typing-extensions>=4.15.0",
  "langchain-core>=1.2.18",
  "langfuse>=4.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
